<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_step_goal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/step_goal_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eg_5000"
        android:inputType="number"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_time_limit"
        android:textSize="20sp"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/time_limit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eg_1"
        android:inputType="number"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_stride_length"
        android:textSize="20sp"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/stride_length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eg_0_76"
        android:inputType="numberDecimal"
        android:layout_marginTop="6dp"/>

    <Button
        android:id="@+id/start_tracking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/start"/>
</LinearLayout>

